Use Base64 from Apache Commons instead of unsupported sun.* classes